<resources>
    <string name="app_name">i4u@NTU</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logoImage">Logo</string>
    <string name="loginHeading">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_icon_description">Password Icon</string>
    <string name="username_icon_description">Username Icon</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="uniLogoImage">Powered By</string>
    <string name="poweredBy">Powered By</string>
    <string name="registerHeading">Register</string>
    <string name="student">Student</string>
    <string name="lecturer">Lecturer</string>
    <string name="title">Title</string>
    <string name="firstname">Firstname</string>
    <string name="middleName">Middle Name</string>
    <string name="lastname">Lastname</string>
    <string name="universityId">University ID</string>
    <string name="courseId">Course</string>
    <string name="email">Email</string>
    <string name="degreeLevel">Degree Level</string>
    <string name="batchNumber">Batch Number</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="forgotPasswordHeading">Forgot Password</string>
    <string name="email_icon_description">Email Icon</string>
    <string name="send">Send</string>
    <string name="back">Back</string>
    <string name="moduleId">Module</string>
    <string name="search">Search</string>
    <string name="oldpassword">Current Password</string>
    <string name="Reset">Reset</string>
    <string name="update">Update</string>
</resources>