<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFragment"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            android:contentDescription="@string/logoImage"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="25dp"
            />
        <TextView
            android:id="@+id/loginHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/machine_gunk"
            android:text="@string/loginHeading"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:layout_marginBottom="10dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconContentDescription="@string/username_icon_description"
            app:startIconDrawable="@drawable/ic_baseline_person_24">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:startIconContentDescription="@string/password_icon_description"
            app:startIconDrawable="@drawable/ic_baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txtForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/mars_brands_regular"
            android:text="@string/forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/gray"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:backgroundTint="@color/logoColor"
                style="@style/Widget.MaterialComponents.Button.Icon"
                />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/poweredBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/mars_brands_regular"
                android:text="@string/poweredBy"
                android:textAllCaps="false"
                android:textColor="@color/gray"
                android:textSize="15sp"
                android:layout_marginTop="30dp"
                android:layout_alignTop="@+id/uniLogoImage"
                android:layout_centerHorizontal="true"
                />

            <ImageView
                android:id="@+id/uniLogoImage"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="25dp"
                android:contentDescription="@string/uniLogoImage"
                android:src="@drawable/uni_logo" />
        </RelativeLayout>
    </LinearLayout>

</FrameLayout>