<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ForgotPasswordFragment"
    android:background="@color/background">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            android:contentDescription="@string/logoImage"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="25dp"
            />
        <TextView
            android:id="@+id/forgotPasswordHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/machine_gunk"
            android:text="@string/forgotPasswordHeading"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:layout_marginBottom="50dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconContentDescription="@string/email_icon_description"
            app:startIconDrawable="@drawable/ic_baseline_email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:backgroundTint="@color/logoColor"
                style="@style/Widget.MaterialComponents.Button.Icon"
                />
            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:backgroundTint="@color/gray"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_marginStart="20dp"
                />

        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/poweredBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/uniLogoImage"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/mars_brands_regular"
                android:text="@string/poweredBy"
                android:textAllCaps="false"
                android:textColor="@color/gray"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/uniLogoImage"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="75dp"
                android:contentDescription="@string/uniLogoImage"
                android:src="@drawable/uni_logo" />
        </RelativeLayout>
    </LinearLayout>

</FrameLayout>