<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/registerHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Profile"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/universityId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/universityId"
            android:layout_marginTop="10dp"
            android:enabled="false"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconContentDescription="@string/username_icon_description"
            app:startIconDrawable="@drawable/ic_baseline_call_to_action_24"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"

                />

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstname"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconContentDescription="@string/username_icon_description"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastname"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconContentDescription="@string/username_icon_description"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/degreeLevel"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconContentDescription="@string/username_icon_description"
            app:startIconDrawable="@drawable/ic_baseline_school_24"
            android:id="@+id/degreeLevel"
            android:enabled="false"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/courseId"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconContentDescription="@string/username_icon_description"
            app:startIconDrawable="@drawable/ic_baseline_school_24"
            android:id="@+id/course"
            android:enabled="false"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/batchNumber"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconContentDescription="@string/username_icon_description"
            app:startIconDrawable="@drawable/ic_baseline_numbers_24"
            android:id="@+id/batchNumber"
            android:enabled="false"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconContentDescription="@string/username_icon_description"
            app:startIconDrawable="@drawable/ic_baseline_email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:backgroundTint="@color/logoColor"
                style="@style/Widget.MaterialComponents.Button.Icon"
                />

        </LinearLayout>

    </LinearLayout>

</ScrollView>